--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clase 09 - Git</title>
 </head>
 <body>
-    
+    <h1>Hola mundo con git</h1>
+
+    <p>Soy un párrafo</p>
 </body>
 </html>
