--- a/ignorado.html
+++ b/ignorado.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="CSS/stlye.css">
-    <title>Clase 09 - Git</title>
+    <title>Ignorado</title>
 </head>
 <body>
-    <h1>Hola mundo con git</h1>
-
-    <p>Soy un párrafo</p>
-
-    <h2>Parrafazo</h2>
+    
 </body>
 </html>
